[metadata]
name = qt-async-threads
description = Use convenient async/await syntax to spawn threads in Qt applications
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://qt-async-threads.readthedocs.io/
author = Bruno Oliveira
author_email = nicoddemus@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: User Interfaces
    Topic :: Utilities
keywords = qt, async, threads
    Source=https://github.com/nicoddemus/qt-async-threads
    Docs=https://qt-async-threads.readthedocs.io

[options]
packages =
    qt_async_threads
install_requires =
    attrs
    boltons
    qtpy

python_requires = >=3.10
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm
zip_safe = no

[options.extras_require]
dev =
    black
    mypy
    pre-commit
    pytest-qt
    requests

[options.entry_points]
pytest11 =
    qt_async_threads = qt_async_threads.pytest_plugin

[options.package_data]
qt_async_threads = py.typed

[build_sphinx]
source_dir = docs
build_dir = docs/build
all_files = 1


[mypy]
mypy_path = src
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = ["src", "tests/**/*.py"]
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
# workaround for https://github.com/python/mypy/issues/10709
ignore_missing_imports_per_module = true
